Fix test-list name alignment (#263)

--- a/src/SimplyTestable/WebClientBundle/Resources/assets/bs3/css/test-list.css
+++ b/src/SimplyTestable/WebClientBundle/Resources/assets/bs3/css/test-list.css
@@ -33,6 +33,7 @@
     padding-right: 0;
     height: 20px;
     margin-top: -2px;
+    text-align: left;
 }
 
 .test-list .summary-stats .label .count {
